# All-In-One

./: .gitignore  AllInOne_Informe.docx  Especificaciones.md  PAGE_BUILDER_GUIDE.md  docker-compose.yml  package-lock.json  pyproject.toml  turbo.json
.github/workflows/: sonar.yml
Backend/: Dockerfile
apps/api/: Dockerfile  requirements.txt
apps/api/app/: main.py
apps/api/app/api/: __init__.py  auth.py  modules.py  pages.py  public.py  site_modules.py  sites.py  templates.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: database.py  seed_modules.py
apps/api/app/middleware/: subdomain.py
apps/api/app/models/: __init__.py  base.py  component.py  page.py  site.py  user.py
apps/api/app/schemas/: __init__.py  site.py  user.py
apps/api/tests/: test_main.py
apps/web/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.css  App.tsx  grapesjs.d.ts  main.tsx
apps/web/src/components/Form/: form.tsx
apps/web/src/components/auth/: AuthModal.tsx
apps/web/src/components/login/: login.css  login.tsx
apps/web/src/components/modal/: Modal.tsx
apps/web/src/components/register/: register.css  register.tsx
apps/web/src/components/sidebar/: sidebar.css  sidebar.tsx
apps/web/src/pages/dashboard/: dashboard.css  dashboard.tsx
apps/web/src/pages/modulos/: modulos.css  modulos.tsx
apps/web/src/pages/plantillas/: plantillas.tsx
apps/web/src/services/: api.ts  blog.service.ts  index.ts  modules.ts  siteAuth.ts  templates.ts  tienda.ts
apps/web/src/types/: index.ts  page.ts  site.ts  user.ts
(+11 files in other folders)
